tests/ui/target_modifiers/incompatible_regparm.error_generated.stderr
error: mixing `-Zregparm` will cause an ABI mismatch
  --> $DIR/incompatible_regparm.rs:9:1
   |
LL | #![crate_type = "lib"]
   | ^
   |
   = help: `-Zregparm` modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zregparm=1` in this crate is incompatible with `-Zregparm=2` in dependency `wrong_regparm`
   = help: set `-Zregparm=2` in this crate or `-Zregparm=1` in `wrong_regparm`
   = help: alternatively, use `-Cunsafe-allow-abi-mismatch=regparm` to silence this error

error: aborting due to 1 previous error

